changes on website
added colors and text colors

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Nick Pettit | Designer</title>
+    <title>Ro Dee Na Htoo | Designer</title>
     <link rel="stylesheet" href="css/normalize.css">
+      <link href='https://fonts.googleapis.com/css?family=Chewy|Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <header>
       <a href="index.html" id="logo">
-        <h1>Nick Pettit</h1>
-        <h2>Designer</h2>
+        <h1>Ro Dee Na Htoo</h1>
+        <h2>Multimedia</h2>
       </a>
       <nav>
         <ul>
