pushing my new fonts, gallery, colors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <div id="wrapper">
       <section>
-        <ul>
+        <ul id="gallery">
           <li>
             <a href="img/numbers-01.jpg">
               <img src="img/numbers-01.jpg" alt="">
@@ -59,7 +59,7 @@
       <footer>
         <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo"></a>
         <a href="http://facebook.com/nickpettit"><img src="img/facebook-wrap.png" alt="Facebook Logo"></a>
-        <p>&copy; 2014 Nick Pettit.</p>
+        <p>&copy; 2016 Ro Dee Na Htoo.</p>
       </footer>
     </div>
   </body>
